# OperatingSystems

./: -pthread  .gitignore  Fifo  Fifo.c  README.markdown  README.md  firstComeFirstServe  firstComeFirstServe.c  main.c  milestone1  milestone1.c  roundRobin  roundRobin.c
Milestone_1/: roundRobin.c
Milestone_2/: CMakeLists.txt  RoundRobin.c  output.txt  scheduler  tasks.json  temp.txt  test.txt
Milestone_2/include/: FCFS.h  MLFQ.h  Queue.h  RoundRobin.h  clock_controller.h  console_controller.h  console_model.h  console_test_driver.h  console_view.h  controller.h  dashboard_view.h  gui_globals.h  index.h  instruction.h  memory_manager.h  mutex.h  parser.h  process.h  simulator_view.h  unified_controller.h  view.h
Milestone_2/log/: log.txt
Milestone_2/logging/: console_log.txt
Milestone_2/programs/: Program_1.txt  Program_3.txt
Milestone_2/src/: FCFS.c  FCFS.h  MLFQ.c  MLFQ.h  PCB.c  PCB.h  Queue.c  Queue.h  README.markdown  RoundRobin.c  RoundRobin.h  clock_controller.c  combined_controller.c  combined_controller.h  console_controller.c  console_log.txt  console_model.c  console_test_driver.c  console_view.c  controller.c  controller.h  dahsboard_controller.h  dashboard  dashboard_controller.c  dashboard_controller.h  dashboard_view.c  dashboard_view.h  gui_main.c  index.c  instruction.c  main  main.c  memory.c  memory.h  memory_manager.c  memory_manager.h  mutex.c  mutex.h  myapp  os_simulator  (+19 more)
Milestone_2/src/logging/: console_log.txt
Milestone_2/src/views/: console_view.c  console_view.h  gui_globals.c  gui_main.c
